--- a/package.json
+++ b/package.json
@@ -5,22 +5,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
-    "papaparse": "^4.6.3",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-file-drop": "^0.2.7",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "read-excel-file": "^2.0.7",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.4.3",
-    "serialport": "^7.1.4",
-    "serialport-gsm": "^1.4.4",
-    "xlsx": "^0.14.1"
+    "serialport": "^7.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
