--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
