--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "express": "^4.16.4",
@@ -16,6 +17,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.4.3",
     "serialport": "^7.1.4"
