Almost send sms

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.4",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
+    "pdu": "^1.1.0",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -22,7 +23,9 @@
     "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.4.3",
-    "serialport": "^7.1.4"
+    "serialport": "^7.1.4",
+    "serialport-gsm": "^1.4.7",
+    "utf8": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
