--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.4",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
+    "pdu": "^1.1.0",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
