--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "connect-timeout": "^1.9.0",
     "express": "^4.16.4",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
+    "node-pdu": "^1.0.15",
     "pdu": "^1.1.0",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
@@ -25,6 +27,7 @@
     "redux-starter-kit": "^0.4.3",
     "serial-at": "0.0.2",
     "serialport": "^7.1.4",
+    "sms-pdu-node": "^0.1.2",
     "utf8": "^3.0.0"
   },
   "scripts": {
