--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "hap": "^2.1.0",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
     "pdu": "^1.1.0",
@@ -25,7 +26,8 @@
     "redux-starter-kit": "^0.4.3",
     "serial-at": "0.0.2",
     "serialport": "^7.1.4",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "util": "^0.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
