--- a/package.json
+++ b/package.json
@@ -4,30 +4,22 @@
   "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "hap": "^2.1.0",
-    "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
-    "pdu": "^1.1.0",
-    "query-string": "^6.2.0",
     "react": "^16.7.0",
+    "react-bootstrap-table-next": "^2.1.1",
     "react-dom": "^16.7.0",
-    "react-expanding-textarea": "^0.2.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-table": "^6.9.0",
-    "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.4.3",
     "serial-at": "0.0.2",
     "serialport": "^7.1.4",
-    "utf8": "^3.0.0",
-    "util": "^0.11.1"
+    "superagent": "^4.1.0",
+    "utf8": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
