--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "connect-mongodb-session": "^2.1.1",
+    "connect-timeout": "^1.9.0",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "helmet": "^3.15.1",
+    "jwt-simple": "^0.5.5",
+    "localtunnel": "^1.9.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.13",
     "morgan": "^1.9.1",
     "react": "^16.7.0",
     "react-bootstrap-table-next": "^2.1.1",
@@ -13,11 +23,13 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.4.3",
+    "request": "^2.88.0",
     "serial-at": "0.0.2",
     "serialport": "^7.1.4",
+    "socket.io": "^2.2.0",
     "superagent": "^4.1.0",
     "utf8": "^3.0.0"
   },
