Backend new config

--- a/package.json
+++ b/package.json
@@ -5,23 +5,25 @@
   "private": true,
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "connect-mongodb-session": "^2.1.1",
+    "connect-mongo": "^2.0.3",
     "connect-timeout": "^1.9.0",
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "helmet": "^3.15.1",
-    "jwt-simple": "^0.5.5",
+    "jsonwebtoken": "^8.5.0",
     "localtunnel": "^1.9.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.13",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "react": "^16.7.0",
     "react-bootstrap-table-next": "^2.1.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
-    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
@@ -30,6 +32,7 @@
     "serial-at": "0.0.2",
     "serialport": "^7.1.4",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "superagent": "^4.1.0",
     "utf8": "^3.0.0"
   },
