--- a/package.json
+++ b/package.json
@@ -4,45 +4,21 @@
   "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "bcrypt-nodejs": "0.0.3",
-    "connect-mongo": "^2.0.3",
-    "connect-timeout": "^1.9.0",
-    "cookie-session": "^2.0.0-beta.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "file-loader": "2.0.0",
     "formik": "^1.5.1",
-    "fs-extra": "7.0.1",
-    "helmet": "^3.15.1",
-    "localtunnel": "^1.9.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.13",
-    "morgan": "^1.9.1",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "react": "^16.7.0",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "react-bootstrap-table-next": "^2.1.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.4.3",
-    "request": "^2.88.0",
-    "serial-at": "0.0.2",
-    "serialport": "^7.1.4",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
     "superagent": "^4.1.0",
-    "utf8": "^3.0.0",
     "yup": "^0.26.10"
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "server": "nodemon src/server",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -173,7 +149,27 @@
     "webpack": "^4.29.6",
     "webpack-dev-server": "^3.2.1",
     "webpack-manifest-plugin": "^2.0.4",
-    "workbox-webpack-plugin": "^4.0.0"
+    "workbox-webpack-plugin": "^4.0.0",
+    "bcrypt-nodejs": "0.0.3",
+    "connect-mongo": "^2.0.3",
+    "connect-timeout": "^1.9.0",
+    "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "file-loader": "2.0.0",
+    "fs-extra": "7.0.1",
+    "helmet": "^3.15.1",
+    "localtunnel": "^1.9.1",
+    "mongoose": "^5.4.13",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "request": "^2.88.0",
+    "serial-at": "0.0.2",
+    "serialport": "^7.1.4",
+    "utf8": "^3.0.0"
   },
   "categories": [
     "Snippets"
