--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "plugin:react-pug/all"
+      "plugin:react-pug/all",
+      "plugin:jsx-a11y/recommended"
     ],
     "plugins": [
-      "react-pug"
+      "react-pug",
+      "jsx-a11y"
     ]
   },
   "browserslist": [
@@ -107,8 +109,13 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-pug": "^7.0.0",
     "babel-preset-react-app": "^7.0.1",
+    "bcrypt-nodejs": "0.0.3",
     "bfj": "^6.1.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "connect-mongo": "^2.0.3",
+    "connect-timeout": "^1.9.0",
+    "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.5",
     "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "dotenv-expand": "^4.2.0",
@@ -120,8 +127,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-pug": "^0.5.7",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
+    "fs-extra": "7.0.1",
     "glob": "^7.1.3",
+    "helmet": "^3.15.1",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
@@ -129,8 +141,14 @@
     "jest-resolve": "^24.1.0",
     "jest-watch-typeahead": "^0.2.1",
     "jsonwebtoken": "^8.5.0",
+    "localtunnel": "^1.9.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "mongoose": "^5.4.13",
+    "morgan": "^1.9.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pnp-webpack-plugin": "^1.3.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
@@ -139,37 +157,21 @@
     "purgecss-webpack-plugin": "^1.4.0",
     "react-app-polyfill": "^0.2.1",
     "react-dev-utils": "^7.0.3",
+    "request": "^2.88.0",
     "resolve": "^1.10.0",
     "sass-loader": "^7.1.0",
+    "serial-at": "0.0.2",
+    "serialport": "^7.1.4",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "terser-webpack-plugin": "^1.2.3",
     "url-loader": "^1.1.2",
+    "utf8": "^3.0.0",
     "webpack": "^4.29.6",
     "webpack-dev-server": "^3.2.1",
     "webpack-manifest-plugin": "^2.0.4",
-    "workbox-webpack-plugin": "^4.0.0",
-    "bcrypt-nodejs": "0.0.3",
-    "connect-mongo": "^2.0.3",
-    "connect-timeout": "^1.9.0",
-    "cookie-session": "^2.0.0-beta.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "file-loader": "2.0.0",
-    "fs-extra": "7.0.1",
-    "helmet": "^3.15.1",
-    "localtunnel": "^1.9.1",
-    "mongoose": "^5.4.13",
-    "morgan": "^1.9.1",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "request": "^2.88.0",
-    "serial-at": "0.0.2",
-    "serialport": "^7.1.4",
-    "utf8": "^3.0.0"
+    "workbox-webpack-plugin": "^4.0.0"
   },
   "categories": [
     "Snippets"
