--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /node_modules
 /.pnp
 .pnp.js
+/src/server/services/globalConfig.js
 
 # testing
 /coverage
@@ -21,6 +22,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+flickr(subir imagenes)-- ignore.text
 
 npm-debug.log*
 yarn-debug.log*
