--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "server": "nodemon src/server",
-    "build": "node scripts/build.js",
+    "server": "nodemon src/server ",
+    "build": "node scripts/build.js && redis-server",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -30,8 +30,13 @@
     ],
     "plugins": [
       "react-pug",
-      "jsx-a11y"
-    ]
+      "jsx-a11y",
+      "react-hooks"
+    ],
+    "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
+    }
   },
   "browserslist": [
     ">0.2%",
@@ -113,7 +118,9 @@
     "bfj": "^6.1.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "connect-mongo": "^2.0.3",
+    "connect-redis": "^3.4.1",
     "connect-timeout": "^1.9.0",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.5",
     "css-loader": "^2.1.0",
@@ -126,10 +133,12 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.1",
     "eslint-plugin-react-pug": "^0.5.7",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "file-loader": "2.0.0",
+    "flickrapi": "^0.6.0",
     "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
     "fs-extra": "7.0.1",
     "glob": "^7.1.3",
@@ -145,6 +154,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "mongoose": "^5.4.13",
     "morgan": "^1.9.1",
+    "nodemailer": "^5.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -157,11 +167,13 @@
     "purgecss-webpack-plugin": "^1.4.0",
     "react-app-polyfill": "^0.2.1",
     "react-dev-utils": "^7.0.3",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
     "resolve": "^1.10.0",
     "sass-loader": "^7.1.0",
     "serial-at": "0.0.2",
     "serialport": "^7.1.4",
+    "shortid": "^2.2.14",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
