--- a/package.json
+++ b/package.json
@@ -138,13 +138,13 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "file-loader": "2.0.0",
-    "flickrapi": "^0.6.0",
     "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
     "fs-extra": "7.0.1",
     "glob": "^7.1.3",
     "helmet": "^3.15.1",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "identity-obj-proxy": "^3.0.0",
+    "instagram-node": "^0.5.8",
     "jest": "^24.1.0",
     "jest-pnp-resolver": "^1.2.0",
     "jest-resolve": "^24.1.0",
@@ -152,13 +152,19 @@
     "jsonwebtoken": "^8.5.0",
     "localtunnel": "^1.9.1",
     "mini-css-extract-plugin": "^0.5.0",
-    "mongoose": "^5.4.13",
+    "mongodb": "^3.2.2",
+    "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
+    "nanoid": "^2.0.1",
     "nodemailer": "^5.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-remember-me": "0.0.1",
+    "passport-twitter": "^1.0.4",
     "pnp-webpack-plugin": "^1.3.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
